dropped support of SecurityManager