@@ -29,33 +29,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>with-security-manager</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration>
-                            <includes>
-                                <include>**/*SecurityTests.java</include>
-                            </includes>
-                            <argLine>
-                                -Djava.security.manager
-                                -Djava.security.policy==${project.basedir}/src/test/resources/all-permissions.policy
-                            </argLine>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>default-test</id>
-                        <phase>test</phase>
-                        <configuration>
-                            <excludes>
-                                <exclude>**/*SecurityTests.java</exclude>
-                            </excludes>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
 
             <plugin>
